--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #00163f80;
   --font-color: #000;
   --btn-bg-color: #990000;
-  --accent-color: #006600;
+  --accent-color: #FFF;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
