--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,10 +8,10 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #FFF;
+  --bg-color: #990000;
   --bg-color-transparent: #00163f80;
   --font-color: #000;
-  --btn-bg-color: #ffffff;
+  --btn-bg-color: #000;
   --accent-color: #000;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
