--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -8,11 +8,11 @@
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Arvo", serif;
   --font-code: "Roboto", monospace;
-  --bg-color: #998855;
+  --bg-color: #00163f;
   --bg-color-transparent: #00163f80;
-  --font-color: #000;
-  --btn-bg-color: #000;
-  --accent-color: #000;
+  --font-color: #ffffff;
+  --btn-bg-color: #ffffff;
+  --accent-color: #be7efe;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
 }
